# ChangeLog for app-text/podofo
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/podofo/ChangeLog,v 1.31 2012/05/01 19:24:25 jer Exp $

  01 May 2012; Jeroen Roovers <jer@gentoo.org> podofo-0.9.1.ebuild:
  Stable for HPPA too.

  06 Mar 2012; Zac Medico <zmedico@gentoo.org> podofo-0.9.1.ebuild:
  Bug #407015: fix to compile with Lua 5.2

  13 Nov 2011; Justin Lecher <jlec@gentoo.org> podofo-0.9.1.ebuild:
  Corrected Slotting of media-libs/tiff and media-libs/libpng

  23 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> -podofo-0.7.0.ebuild,
  -podofo-0.8.1-r1.ebuild, -podofo-0.8.2.ebuild, -podofo-0.8.4.ebuild:
  old

  16 Oct 2011; Kacper Kowalik <xarthisius@gentoo.org> podofo-0.9.1.ebuild:
  ppc stable wrt #385913

  11 Oct 2011; Samuli Suominen <ssuominen@gentoo.org> podofo-0.9.1.ebuild:
  ppc64 stable wrt #385913

  08 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> podofo-0.9.1.ebuild:
  x86 stable wrt bug #385913

  06 Oct 2011; Markos Chandras <hwoarang@gentoo.org> podofo-0.9.1.ebuild:
  Stable on amd64 wrt bug #385913

  05 Sep 2011; Zac Medico <zmedico@gentoo.org> podofo-0.7.0.ebuild,
  podofo-0.8.1-r1.ebuild, podofo-0.8.2.ebuild, podofo-0.8.4.ebuild,
  podofo-0.9.1.ebuild:
  Bug #381359 - undefined reference to `PoDoFo::PdfVariant::DelayedLoadImpl()'
  triggered by -fvisibility-inlines-hidden in CXXFLAGS.

  12 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> podofo-0.8.1-r1.ebuild:
  ppc stable wrt #333627

*podofo-0.9.1 (09 May 2011)

  09 May 2011; Zac Medico <zmedico@gentoo.org> +podofo-0.9.1.ebuild:
  0.9.1 version bump.

  24 Feb 2011; Zac Medico <zmedico@gentoo.org> podofo-0.8.4.ebuild:
  Bug #356293 - libpng-1.5 compatibility

  19 Jan 2011; Zac Medico <zmedico@gentoo.org> podofo-0.8.4.ebuild:
  Bug #352125 - Disable FontTest::testFonts since it fails depending on
  installed fonts.

*podofo-0.8.4 (14 Nov 2010)

  14 Nov 2010; Zac Medico <zmedico@gentoo.org> +podofo-0.8.4.ebuild: