@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST podofo-0.9.1.tar.gz 1080079 SHA256 7b969de0b6c584358f26fc5de23cff0378f46023e678fe058efbb64003ec9745 SHA512 4584aa770fd74eb246048d0350cfe55ffccb58528bf2e861fc6211a12cc8787e7118bb0023fc0977c5f8e483ce89c1c182a12e8b580983069c87e1a0d5b614e6 WHIRLPOOL ed09415f4ab15ec6fd47303b2a4b411426f43eef8fd14186f7ff00b2b78f985965da8421480b0888600ff407cb6d799df1d2bf65c36b858336633fd49a2932cf
-EBUILD podofo-0.9.1.ebuild 2919 SHA256 dca560a1bdf25d07d7a73ad50914b98b89e9b253c1419e0958865fa03283f936 SHA512 f1d2c4ae3c0debd4a49d71ee49864f6c31c6443f4998004aec313751c28e181da883e93c84ae238ebaae7aebf9fbdc7914c6e733f43eb917df201f88aa0f3bb4 WHIRLPOOL af60b1007e15c687ebd21f1b050c747896bca5aacdcfa89cae780eca6e910f3cc0380095da063c034df77142206fe01624076c3f7491308b9187745cca2103af
-MISC ChangeLog 4296 SHA256 5e94d6cf0b63908ae3901d29d66b35e8a8f0d4756211d0143e0dbf2db2e59c50 SHA512 8f6f2edacc916c402ce50edd12983df4ae0fc7aaa99d7f14710a96d00a057f3b2a10d58b6837f2d75adc50b403ce0da0d3b0181e386b742f3288a8e6c8d790fd WHIRLPOOL 72ea08331a4029b26bbaa2245d84e7f5d23e5070921b59d55934629fba3f66e40b041252d394b1406b8d9180de4b64e7b6b45a09bf28d0cf7d28753a943974e5
+EBUILD podofo-0.9.1.ebuild 3090 SHA256 189119ed75421608e771dbb67bb1996e781aa8f9f666f52e760b184420461f60 SHA512 1c7b53140c3e2098584514422bb122a363955e0ca0690a59ebf5f8815455a8b85c6cbc705087132c8cab61d9a0297158455957b6219b3d17ec03a4315bdfefd7 WHIRLPOOL d1379b0c232bd87aaedd08488ccb3ae24ea2a143bedc6b913ddca7b531268688af24355f5fe299ce8760ff2a02b756e4f78c852635f11bbe85e5eb8290e13a82
+MISC ChangeLog 4441 SHA256 a5cd820a62ea59c8b0c68d081f350d10a1cd4d13897b73efe53c5d471f816f0f SHA512 bb439beb05d6eba0ee8b8fb39fd23056eb2e4358937f2b437afc29a01ba0dec728c5897929375e711da4877830e111a79f19b5b31240bd76035f3a55bbe7c5ba WHIRLPOOL 61f9801ff347db21dfbfcf38e02facedea5df0b0ab508dce5ac182a9dffb4d256a50aae5f7fb483c09585a36c8b6d0c4437b0564bc637a6b7676715bacf27d00
 MISC metadata.xml 260 SHA256 8a81d33d3746a4c328ebc474793bdf7dbb0e8c80abf7950df90e8a9c2f85b2fe SHA512 1a84834d9c229b383c0db3a0e9ef91b4cd98db63e7a062a98f047cd89a2a45b392939bc28fcc26b5da0e86f21e8d19d904fcb06a1ddd5bedf8387f900291fff1 WHIRLPOOL 8611e4e75ee5ba8862c0dc96534b1a2bb09450de2966dc340f2f3cd030a48c28e9d2f727f36e81080b2cda3fdb11403fa058251cd73b022fbf97ae274378ba57
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iEYEAREIAAYFAlCMnGQACgkQ/ejvha5XGaPRqwCfeKUj6twNgoW1h0UHEL3kE8jQ
+4rUAnimMk18xbZzlDPgHRev6s2KpjvB4
+=/PdB
+-----END PGP SIGNATURE-----
